--- a/package.json
+++ b/package.json
@@ -3,6 +3,13 @@
   "version": "1.1.0",
   "description": "A multilingual date extraction tool for text in English, German, Russian, and Ukrainian",
   "main": "index.js",
+  "type": "commonjs",
+  "exports": {
+    ".": {
+      "require": "./index.js",
+      "import": "./index.js"
+    }
+  },
   "scripts": {
     "test": "node test.js"
   },
